Merge multiple ignored source entires for the same field